--- a/src/sass/globals/_links.sass
+++ b/src/sass/globals/_links.sass
@@ -2,7 +2,7 @@ a:link,
 a:visited,
 a:hover,
 a:focus
-    color: $global-link-color
+    color: var(--global-link-color, #008080)
     text-decoration: none
 
 a:hover
