--- a/src/sass/mixins/_media-query.sass
+++ b/src/sass/mixins/_media-query.sass
@@ -21,3 +21,7 @@
     $value2: map-get($screens, $size2)
     @media (min-width: $value1) and (max-width: $value2)
         @content
+
+=media-nav
+    @media screen and (max-width: 900px)
+        @content
