--- a/src/sass/components/_panel.sass
+++ b/src/sass/components/_panel.sass
@@ -2,20 +2,62 @@
     display: flex
     flex: 1
     flex-direction: column
-    background: $panel-background-color
-    color: $panel-text-color
-    +radius
+    background: var(--panel-bg-color, #fff)
+    color: var(--panel-text-color, #111)
+    border: solid 1px var(--panel-border-color, #dcdada)
+    border-radius: var(--panel-radius, 4px)
+
+    & > :first-child
+        border-radius: var(--panel-radius, 4px) var(--panel-radius, 4px) 0 0
+
+    & > :last-child
+        border-radius: 0 0 var(--panel-radius, 4px) var(--panel-radius, 4px)
+
+    &__img
+        width: 100%
+        object-fit: cover
+        display: block
 
     &__header
-        border-bottom: solid 1px var(--mute-color)
-        padding: $global-padding
+        border-bottom: solid 1px var(--panel-border-color, #dcdada)
+        padding: var(--global-padding, 15px)
         font-weight: 700
 
+        &:not(:first-child)
+            border-top: solid 1px var(--panel-border-color, #dcdada)
+
+
     &__body
-        padding: $global-padding
+        padding: var(--global-padding, 15px)
 
     &__footer
-        padding: $global-padding
-        border-top: solid 1px var(--mute-color)
-        background-color: var(--mute-color)
+        padding: var(--global-padding, 15px)
+        border-top: solid 1px var(--panel-border-color, #dcdada)
+        background-color: var(--panel-footer-bg-color, #f8f8f8)
+        color: var(--panel-footer-text-color, #111)
         margin-top: auto
+        //border-radius: 0 0 var(--panel-radius, 4px) var(--panel-radius, 4px)
+
+
+    &__figure
+        position: relative
+        display: block
+        width: 100%
+        margin: 0
+        overflow: hidden
+
+        &:hover
+            .panel__caption
+                transform: translateY(0%)
+
+    &__caption
+        position: absolute
+        text-align: center
+        padding: var(--global-padding, 15px)
+        background-color: var(--figcaption-color, rgba(0,0,0,0.5))
+        color: var(--white-color, #fff)
+        bottom: 0
+        width: 100%
+        z-index: 2
+        transition: transform var(--global-transition-speed, 0.25s) ease
+        transform: translateY(100%)
