--- a/src/sass/utilities/_flex.sass
+++ b/src/sass/utilities/_flex.sass
@@ -16,6 +16,10 @@
     &--center
         justify-content: center
         align-items: center
+    &--wrap
+        flex-wrap: wrap
+    &--nowrap
+        flex-wrap: nowrap
 
 
 .justify
