--- a/src/sass/utilities/_shadow.sass
+++ b/src/sass/utilities/_shadow.sass
@@ -2,13 +2,15 @@
 .shadow
     @for $i from 1 through 10
         &--#{$i}
-            box-shadow: rgba(#000, 0.3 ) 0 #{$i}px #{$i * 3}px
-            &-hover
+            box-shadow: var(--global-shadow-color, rgba(0,0,0,0.25)) 0 #{$i}px #{$i * 3}px
+            transition: box-shadow var(--global-transition-speed, 0.25s) ease
+            &\:hover
                 &:hover
-                    box-shadow: rgba(#000, 0.35) 0 #{$i}px #{$i}px
+                    box-shadow: var(--global-shadow-color-hover, rgba(0,0,0,0.25)) 0 #{$i}px #{$i}px
 
         &--inset-#{$i}
-            box-shadow: inset rgba(#000, 0.3 ) 0 0 #{$i * 3}px
-            &-hover
+            box-shadow: inset var(--global-shadow-color, rgba(0,0,0,0.25)) 0 0 #{$i * 3}px
+            transition: box-shadow var(--global-transition-speed, 0.25s) ease
+            &\:hover
                 &:hover
-                    box-shadow: inset rgba(#000, 0.35) 0 0 #{$i}px
+                    box-shadow: inset var(--global-shadow-color-hover, rgba(0,0,0,0.25)) 0 0 #{$i}px
