--- a/src/sass/components/_btn.sass
+++ b/src/sass/components/_btn.sass
@@ -31,8 +31,8 @@ input[type="button"].btn
         text-decoration: none
         box-shadow: var(--global-shadow-color, rgba(0,0, 0,25)) 0 4px 7px -3px
 
-    &:not(:first-child)
-        margin-left: 10px
+    &:not(:last-child)
+        margin-right: 10px
 
     /** Button focus **/    
     &:focus
