--- a/src/sass/mixins/_media-query.sass
+++ b/src/sass/mixins/_media-query.sass
@@ -23,5 +23,5 @@
         @content
 
 =media-nav
-    @media screen and (max-width: 900px)
+    @media screen and (min-width: nav(breakpoint))
         @content
