--- a/src/sass/_init.sass
+++ b/src/sass/_init.sass
@@ -1,5 +1,6 @@
 
-@import "node_modules/normalize-scss/sass/normalize/import-now"
+@import "../../node_modules/normalize-scss/sass/normalize/import-now"
+@import "config/main"
 @import "globals/main"
 @import "mixins/main"
 @import "functions/main"
