--- a/src/sass/components/_btn.sass
+++ b/src/sass/components/_btn.sass
@@ -37,7 +37,7 @@ input[type="button"].btn
     /** Button focus **/    
     &:focus
         z-index: 2
-        filter: brightness(0.9) drop-shadow(0 5px 5px var(--default-color))
+        filter: brightness(0.9)
     
     /** Button Colors **/
     @each $key, $value in $colors_set
@@ -57,6 +57,12 @@ input[type="button"].btn
                     background: var(--#{$key}-light-color)
                 @else
                     background: var(--#{$key}-dark-color)
+
+            &:focus
+                @if lightness($value) < 60%
+                    filter: brightness(0.9)
+                @else
+                    filter: brightness(0.2)
 
         /** Outline Button **/
         &--#{$key}-outline
