default vars to config

--- a/src/sass/_theme.sass
+++ b/src/sass/_theme.sass
@@ -43,6 +43,7 @@ $nav-breakpoint: 900px
     //--nav-links-background-hover: #fff
     //--nav--links-color: #fff
     //--nav-links-color-hover: #111
+    --nav-links-font-family: 'Orbitron', sans-serif
 
     //--nav-button-height: 48px
     //--nav-link-text-color: var(--primary-color)
