--- a/src/sass/components/_btn.sass
+++ b/src/sass/components/_btn.sass
@@ -87,6 +87,10 @@ input[type="button"].btn
             &:hover
                 background: linear-gradient(to top, var(--#{$key}-light-color) 0% 50%, var(--#{$key}-dark-color))
 
+
+    &--block
+        width: 100%
+
     &--glass
         backdrop-filter: blur(2px)
         background-clip: padding-box
