--- a/src/sass/components/_nav.sass
+++ b/src/sass/components/_nav.sass
@@ -87,7 +87,7 @@
         a
             height: var(--nav-button-height, nav(button, height))
             line-height: var(--nav-button-height, nav(button, height))
-            font-family: var(--nav-brand-font-family, nav(brand, font-family))
+            font-family: var(--nav-links-font-family, nav(links, font-family))
             background-color: var(--nav-links-background, nav(links, background))
             color: var(--nav-links-color, nav(links, color))
             text-decoration: none
