--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -48,3 +48,5 @@ body
     --panel-footer-bg-color: var(--primary-light-color)
     --panel-footer-text-color: #ccc
 
+.second-nav
+    --nav-background-color: var(--secondary-color)
