--- a/src/sass/_theme.sass
+++ b/src/sass/_theme.sass
@@ -1,15 +1,14 @@
 
 $color-shade-strength: 7% !default
-$colors: ()
 $colors: (primary: #e63946, secondary: #457b9d, dark: #1d3557, default: #e1e1e1)
-$screens: (xs: 300px, sm: 480px, md: 800px, lg: 1200px, xl: 1400px)
+$screens: (xs: 300px, sm: 570px, md: 800px, lg: 1000px, xl: 1200px)
 $max-screen-width: 1000px
 $columns: 12
 $nav-breakpoint: 900px
 
 \:root
-    --global-header-font: 'Orbitron', sans-serif
-    --global-body-font: 'Roboto', sans-serif
+    //--global-header-font: 'Orbitron', sans-serif
+    //--global-body-font: 'Roboto', sans-serif
 
     //--global-color: #333
     //--global-bg-color: #fbfafa
@@ -18,8 +17,8 @@ $nav-breakpoint: 900px
     //--global-shadow-color-hover: rgba(0,0,0,3)
     //--global-transition-speed: 0.25s
     //--global-line-height: 1.68
-    //--global-link-color: #008080
-    //--global-padding: 12px
+    --global-link-color: #008080
+    --global-padding: 12px
     //--global-negative-padding: -12px
     //--global-border-radius: 4px
 
@@ -31,7 +30,7 @@ $nav-breakpoint: 900px
 
     //--nav-brand-font-size: 22px
     //--nav-brand-color: var(--white-color)
-    --nav-brand-font-family: 'Orbitron', sans-serif
+    //--nav-brand-font-family: 'Orbitron', sans-serif
 
     //--nav-trigger-color: blue
     //--nav-trigger-background: #eee
@@ -43,7 +42,7 @@ $nav-breakpoint: 900px
     //--nav-links-background-hover: #fff
     //--nav--links-color: #fff
     //--nav-links-color-hover: #111
-    --nav-links-font-family: 'Orbitron', sans-serif
+    //--nav-links-font-family: 'Orbitron', sans-serif
 
     //--nav-button-height: 48px
     //--nav-link-text-color: var(--primary-color)
