update alert color and fix wrapper--fluid

--- a/src/sass/_theme.sass
+++ b/src/sass/_theme.sass
@@ -1,5 +1,8 @@
 
 $color-shade-strength: 7% !default
+$colors: ()
+$alert-colors: ()
+
 $colors: (primary: #e63946, secondary: #457b9d, dark: #1d3557, default: #e1e1e1)
 $screens: (xs: 300px, sm: 570px, md: 800px, lg: 1000px, xl: 1200px)
 $max-screen-width: 1000px
@@ -37,10 +40,11 @@ $nav-breakpoint: 900px
     //--nav-trigger-border-color: red
     //--nav-trigger-width: 3px
     //--nav-trigger-size: 30px
+    --nav-trigger-icon: ''
 
     //--nav-links-background: transparent
     //--nav-links-background-hover: #fff
-    //--nav--links-color: #fff
+    //--nav-links-color: #fff
     //--nav-links-color-hover: #111
     //--nav-links-font-family: 'Orbitron', sans-serif
 
