--- a/src/sass/components/_btn.sass
+++ b/src/sass/components/_btn.sass
@@ -3,7 +3,7 @@
 /** Default Button style **/
 
 .btn
-    background-color: green
+    background-color: transparent
 
 .btn,
 a.btn,
@@ -15,7 +15,7 @@ input[type="button"].btn
     justify-content: center
     padding: 10px 20px
     outline: none
-    border: 2px solid transparent
+    border: 1px solid transparent
     line-height: 1.68
     letter-spacing: 1px
     font-weight: 500
