--- a/src/sass/components/_grid.sass
+++ b/src/sass/components/_grid.sass
@@ -9,6 +9,7 @@
 
     &--fluid
         display: flex
+        flex-direction: column
         margin-left: auto
         margin-right: auto
         width: 100%
