--- a/src/sass/components/_nav.sass
+++ b/src/sass/components/_nav.sass
@@ -30,6 +30,7 @@
             max-width: 100%
 
     &__trigger
+        position: relative
         display: flex
         justify-content: center
         align-items: center
@@ -42,6 +43,18 @@
         border-radius: var(--nav-trigger-border-radius, nav(trigger, border-radius))
         border-style: solid
         cursor: pointer
+
+        &::after 
+            position: absolute
+            top: 0
+            left: 0
+            width: 100%
+            height: 100%
+            content: var(--nav-trigger-icon, '')
+            // background: pink
+            display: flex 
+            justify-content: center
+            align-items: center
 
         +media-nav
             display: none
