--- a/src/sass/_theme.sass
+++ b/src/sass/_theme.sass
@@ -10,8 +10,8 @@ $columns: 12
 $nav-breakpoint: 900px
 
 \:root
-    //--global-header-font: 'Orbitron', sans-serif
-    //--global-body-font: 'Roboto', sans-serif
+    --global-header-font: 'Orbitron', sans-serif
+    --global-body-font: 'Roboto', sans-serif
 
     //--global-color: #333
     //--global-bg-color: #fbfafa
@@ -33,7 +33,7 @@ $nav-breakpoint: 900px
 
     //--nav-brand-font-size: 22px
     //--nav-brand-color: var(--white-color)
-    //--nav-brand-font-family: 'Orbitron', sans-serif
+    --nav-brand-font-family: 'Orbitron', sans-serif
 
     //--nav-trigger-color: blue
     //--nav-trigger-background: #eee
