--- a/src/sass/components/_form.sass
+++ b/src/sass/components/_form.sass
@@ -19,6 +19,8 @@
         //height: 40px
         & > .btn
             height: 100%
+            &:hover
+                box-shadow: none
 
         &:focus-within
             box-shadow: var(--default-dark-color) 0 0 10px
