--- a/src/sass/components/_btn.sass
+++ b/src/sass/components/_btn.sass
@@ -20,7 +20,7 @@ input[type="button"].btn
     letter-spacing: 1px
     font-weight: 500
     text-align: center
-    box-shadow: rgba(0,0,0,0.1) 0 1px 3px
+    //box-shadow: rgba(0,0,0,0.1) 0 1px 3px
     cursor: pointer
     text-decoration: none
     color: #333
@@ -63,15 +63,16 @@ input[type="button"].btn
                     background: var(--#{$key}-dark-color)
 
             &:focus
-                @if lightness($value) < 60%
-                    filter: brightness(0.9)
+                @if lightness($value) > 60%
+                    filter: drop-shadow(0 0 5px var(--#{$key}-light-color))
                 @else
-                    filter: brightness(0.2)
+                    filter: drop-shadow(0 0 5px var(--#{$key}-dark-color))
+
 
         /** Outline Button **/
         &--#{$key}-outline,
         &--#{$key}-outline\:hover
-            background-color: transparent
+            background-color: var(--white-color)
             border: solid 2px var(--#{$key}-color)
             color: var(--#{$key}-color)
             &:hover
@@ -79,7 +80,11 @@ input[type="button"].btn
                     border: solid 2px var(--#{$key}-light-color)
                 @else
                     border: solid 2px var(--#{$key}-dark-color)
-
+            &:focus
+                @if lightness($value) > 60%
+                    filter: drop-shadow(0 0 5px var(--#{$key}-light-color))
+                @else
+                    filter: drop-shadow(0 0 5px var(--#{$key}-dark-color))
         /** Gradient Button **/
         &--#{$key}-gradient,
         &--#{$key}-gradient\:hover
@@ -92,7 +97,11 @@ input[type="button"].btn
                 color: var(--black-color)
             &:hover
                 background: linear-gradient(to top, var(--#{$key}-light-color) 0% 50%, var(--#{$key}-dark-color))
-
+            &:focus
+                @if lightness($value) > 60%
+                    filter: drop-shadow(0 0 5px var(--#{$key}-light-color))
+                @else
+                    filter: drop-shadow(0 0 5px var(--#{$key}-dark-color))
 
     &--block
         width: 100%
